message(STATUS "Examples: CXXFLAGS: ${CMAKE_CXX_FLAGS}")

list(APPEND GUM_LIBRARIES ${CMAKE_THREAD_LIBS_INIT})

 
        list(APPEND GUM_LIBRARIES ${CMAKE_PROJECT_NAME}) 
        if(OPENGL_FOUND)
            list(APPEND GUM_LIBRARIES ${OPENGL_LIBRARIES})
        else()
            message(FATAL_ERROR Library for OPENGL cannot not found)
        endif() 
        if(GLEW_FOUND)
            list(APPEND GUM_LIBRARIES ${GLEW_LIBRARIES})
        else()
            message(FATAL_ERROR Library for GLEW cannot not found)
        endif() 
        if(GUMSYSTEM_FOUND)
            list(APPEND GUM_LIBRARIES ${GUMSYSTEM_LIBRARIES})
        else()
            message(FATAL_ERROR Library for GUMSYSTEM cannot not found)
        endif() 
        if(GUMMATHS_FOUND)
            list(APPEND GUM_LIBRARIES ${GUMMATHS_LIBRARIES})
        else()
            message(FATAL_ERROR Library for GUMMATHS cannot not found)
        endif() 
        if(GUMESSENTIALS_FOUND)
            list(APPEND GUM_LIBRARIES ${GUMESSENTIALS_LIBRARIES})
        else()
            message(FATAL_ERROR Library for GUMESSENTIALS cannot not found)
        endif() 
        if(GUMCODECS_FOUND)
            list(APPEND GUM_LIBRARIES ${GUMCODECS_LIBRARIES})
        else()
            message(FATAL_ERROR Library for GUMCODECS cannot not found)
        endif() 
        if(GUMDESKTOP_FOUND)
            list(APPEND GUM_LIBRARIES ${GUMDESKTOP_LIBRARIES})
        else()
            message(FATAL_ERROR Library for GUMDESKTOP cannot not found)
        endif() 
        if(GUMGLFW_FOUND)
            list(APPEND GUM_LIBRARIES ${GUMGLFW_LIBRARIES})
        else()
            message(FATAL_ERROR Library for GUMGLFW cannot not found)
        endif()

include_directories(${CMAKE_SOURCE_DIR}/src/)
 
        if(OPENGL_FOUND)
            include_directories(${OPENGL_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for OPENGL cannot not found)
        endif() 
        if(GLEW_FOUND)
            include_directories(${GLEW_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for GLEW cannot not found)
        endif() 
        if(GUMSYSTEM_FOUND)
            include_directories(${GUMSYSTEM_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for GUMSYSTEM cannot not found)
        endif() 
        if(GUMMATHS_FOUND)
            include_directories(${GUMMATHS_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for GUMMATHS cannot not found)
        endif() 
        if(GUMESSENTIALS_FOUND)
            include_directories(${GUMESSENTIALS_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for GUMESSENTIALS cannot not found)
        endif() 
        if(GUMCODECS_FOUND)
            include_directories(${GUMCODECS_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for GUMCODECS cannot not found)
        endif() 
        if(GUMDESKTOP_FOUND)
            include_directories(${GUMDESKTOP_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for GUMDESKTOP cannot not found)
        endif() 
        if(GUMGLFW_FOUND)
            include_directories(${GUMGLFW_INCLUDE_DIRS})
        else()
            message(FATAL_ERROR Library for GUMGLFW cannot not found)
        endif()

link_directories(${CMAKE_BINARY_DIR}/src/)

add_definitions(-DEXAMPLES_PATH=\"${CMAKE_SOURCE_DIR}/examples\")

set(EXAMPLE_FILE_LIST ObjectConversion)

foreach(EXAMPLE ${EXAMPLE_FILE_LIST})
    message(STATUS "Adding target ${EXAMPLE}")
    add_executable(Example_${EXAMPLE} "./${EXAMPLE}.cpp")
    target_link_libraries(Example_${EXAMPLE} "${GUM_LIBRARIES}")
endforeach()
